# cybersec-llm-evaluation

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/core/: consts.py  logging_setup.py  paths.py
src/core/decorators/: error_handling.py  log_calls.py
src/core/settings/: settings.py
src/data/: base.py  dataloader.py  schema.py
src/data/logs/: intrusion_detecion_dataloader.py
src/data/phishing/: phishing_emails_dataloader.py  phishing_website_dataloader.py
src/data/vulnerable_code/: bigvul_dataloader.py
src/evaluation/: batch_evaluator.py  evaluator.py  majority_vote_judge.py  schema.py
src/llm/: consts.py  schema.py
src/llm/cloud/anthropic/: claude-anthropic.py  claude_anthropic.py  schema.py
src/llm/cloud/google/: google-gemini.py  google_gemini.py  schema.py
src/llm/cloud/openai/: openai-gpt.py  openai_gpt.py  schema.py
src/llm/on_premise/: base_hf.py  schema.py
