[project]
name = "cybersec-llm-evaluation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68.0",
    "asyncio>=4.0.0",
    "datasets>=4.1.1",
    "deepeval>=3.5.6",
    "google-genai>=1.38.0",
    "huggingface-hub>=0.35.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "loguru>=0.7.3",
    "openai>=1.109.0",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "ruff>=0.13.1",
    "scipy>=1.16.2",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.authors]
name = "Jakub Pluta"
email = "jakubpluta@proton.me"

[tool.ruff]
line-length = 88
exclude = [
    "src/llm/consts.py",
    "src/evaluation/evaluator.py",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "kagglehub.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-requests>=2.32.4.20250913",
]
